src/test/deca/context/invalid/resultats/test3_op_arith-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test3_op_arith.ass introuvable
